修改Patient 电话错误字段名

--- a/Patient/Table.html
+++ b/Patient/Table.html
@@ -109,7 +109,7 @@
                 },
                 {
                     title: '手机号码',
-                    field: 'phonenum',
+                    field: 'phoneNum',
                     align: 'center',
                 },
                 {
