--- a/Department/add.html
+++ b/Department/add.html
@@ -68,6 +68,18 @@
         let form = layui.form;
         let $ = layui.jquery;
 
+        $.ajax({
+            URL:'https://localhost:7283/v1/api/Department/DoctorOption',
+            type:'get',
+            success:function(result){
+                if(result!=null)
+                {
+                    $('#departmentSelect').append('<option value="'+result[i].id +'">' + result[i].doctorName + '</option>')
+                    }
+                    form.render('select');
+                }
+        })
+
         form.on('submit(save)', function (data) {
             $.ajax({
                 url: 'https://localhost:7283/v1/api/Department',
