--- a/Doctor/Table.html
+++ b/Doctor/Table.html
@@ -99,7 +99,7 @@
                     align: 'center'
                 },{
                     title: '科室',
-                    field: 'departmentId',
+                    field: 'departmentName',
                     align: 'center'
                 },
                 {
