修改了bug科室下拉选

--- a/Department/add.html
+++ b/Department/add.html
@@ -74,7 +74,7 @@
             success:function(result){
                 if(result!=null)
                 {
-                    $('#departmentSelect').append('<option value="'+result[i].id +'">' + result[i].doctorName + '</option>')
+                    $('#leaderSelect').append('<option value="'+result[i].id +'">' + result[i].doctorName + '</option>')
                     }
                     form.render('select');
                 }
