--- a/Department/add.html
+++ b/Department/add.html
@@ -61,16 +61,17 @@
         let $ = layui.jquery;
 
         $.ajax({
-            URL:'https://localhost:7283/v1/api/Department/DoctorOption',
-            type:'get',
-            success:function(result){
-                if(result!=null)
-                {
-                    $('#leaderSelect').append('<option value="'+result[i].id +'">' + result[i].doctorName + '</option>')
+            url: 'https://localhost:7283/v1/api/Department/doctorOption',
+            type: 'get',
+            success: function (result){
+                if (result != null){
+                    for (let i =0;i<result.length;i++){
+                        $('#leaderSelect').append('<option value="'+result[i].id +'">' + result[i].doctorName + '</option>')
                     }
                     form.render('select');
                 }
-        })
+            }
+        });
 
         form.on('submit(save)', function (data) {
             $.ajax({
