--- a/Department/Table.html
+++ b/Department/Table.html
@@ -90,7 +90,7 @@
                 },
                 {
                     title: '科室主管',
-                    field: 'leaderId',
+                    field: 'leaderName',
                     align: 'center',
                 },
                 {
