修改Patient患者表的病房编号属性

--- a/Patient/Table.html
+++ b/Patient/Table.html
@@ -84,8 +84,7 @@
                 {
                     title: '病房编号',
                     field: 'wardId',
-                    align: 'center',
-                    hide: true
+                    align: 'center'
                 },
                 {
                     title: '患者姓名',
@@ -194,7 +193,7 @@
         }
 
         window.remove = function(obj) {
-            layer.confirm('确定要删除该用户', {
+            layer.confirm('确定要删除该患者', {
                 icon: 3,
                 title: '提示'
             }, function(index) {
