--- a/Patient/Table.html
+++ b/Patient/Table.html
@@ -83,7 +83,7 @@
                 },
                 {
                     title: '病房编号',
-                    field: 'wardId',
+                    field: 'wardTitle',
                     align: 'center'
                 },
                 {
