--- a/Patient/add.html
+++ b/Patient/add.html
@@ -17,10 +17,11 @@
                         <input type="text" name="patientName" required lay-verify="required" autocomplete="off" placeholder="请输入姓名" class="layui-input">
                     </div>
                 </div>
+
                 <div class="layui-form-item">
                     <label class="layui-form-label">病房名称</label>
                     <div class="layui-input-block">
-                        <input type="text" name="WardId" required lay-verify="required" autocomplete="off" placeholder="请输入病房名称" class="layui-input">
+                        <select id="WardSelect" name="wardID"><option value=""></option></select>
                     </div>
                 </div>
 
