--- a/Role/Table.html
+++ b/Role/Table.html
@@ -178,7 +178,7 @@
                 area: ['500px', '400px'],
                 content: 'edit.html'
             });
-            context.put("RoleId",obj.data['id'])
+            context.put("roleId",obj.data['id'])
         }
 
         window.remove = function(obj) {
