--- a/Role/edit.html
+++ b/Role/edit.html
@@ -54,7 +54,7 @@
         let $ = layui.jquery;
 
         $.ajax({
-            url: 'https://localhost:7283/v1/api/Role/' + context.get("RoleId"),
+            url: 'https://localhost:7283/v1/api/Role/' + context.get("roleId"),
             type: 'get',
             success:function (result){
                 if (result.success){
@@ -69,7 +69,7 @@
 
         form.on('submit(user-save)', function(data){
             $.ajax({
-                url:'https://localhost:7283/v1/api/Role/' + context.get("RoleId")
+                url:'https://localhost:7283/v1/api/Role/' + context.get("roleId")
                     + '?description=' + data.field.description
                     + '&authority=' + data.field.authority,
                 contentType: "application/x-www-form-urlencoded",
