添加Drugstorage表下拉选药品id

--- a/Drugstorage/Table.html
+++ b/Drugstorage/Table.html
@@ -82,12 +82,12 @@
                 },
                 {
                     title: '厂家Id',
-                    field: 'manufacturerId',
+                    field: 'manufacturerName',
                     align: 'center',
                 },
                 {
                     title: '药品Id',
-                    field: 'drugId',
+                    field: 'drugTitle',
                     align: 'center',
                 },
                 {
