--- a/Doctor/edit.html
+++ b/Doctor/edit.html
@@ -80,7 +80,8 @@
                         "id": result.data.id,
                         "phoneNum": result.data.phoneNum,
                         "registeredPrice": result.data.registeredPrice,
-                        "status": result.data.status
+                        "status": result.data.status,
+                        "departmentId":result.data.departmentId
                     });
                 }
             }
