添加登入页面

--- a/Home/index.html
+++ b/Home/index.html
@@ -98,7 +98,7 @@
         // 登出逻辑
         admin.logout(function(){
             popup.success("注销成功",function(){
-                location.href = "../Pear-Admin-Layui-3.9.2/login.html";
+                location.href = "../login.html";
             })
             // 注销逻辑 返回 true / false
             return true;
